--- a/Pood/Pood.csproj
+++ b/Pood/Pood.csproj
@@ -62,16 +62,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Tooded.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Tooded.Designer.cs">
+      <DependentUpon>Tooded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kassa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kassa.Designer.cs">
+      <DependentUpon>Kassa.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Kassa.resx">
+      <DependentUpon>Kassa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tooded.resx">
+      <DependentUpon>Tooded.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
