--- a/Pood/Pood.csproj
+++ b/Pood/Pood.csproj
@@ -71,17 +71,23 @@
     <Compile Include="Kassa.Designer.cs">
       <DependentUpon>Kassa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Kasutaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kasutaja.Designer.cs">
+      <DependentUpon>Kasutaja.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Menu.Designer.cs">
       <DependentUpon>Menu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Registreerimine.cs">
+    <Compile Include="Omanik.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Registreerimine.Designer.cs">
-      <DependentUpon>Registreerimine.cs</DependentUpon>
+    <Compile Include="Omanik.Designer.cs">
+      <DependentUpon>Omanik.cs</DependentUpon>
     </Compile>
     <Compile Include="Tooded.cs">
       <SubType>Form</SubType>
@@ -94,11 +100,14 @@
     <EmbeddedResource Include="Kassa.resx">
       <DependentUpon>Kassa.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Kasutaja.resx">
+      <DependentUpon>Kasutaja.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Registreerimine.resx">
-      <DependentUpon>Registreerimine.cs</DependentUpon>
+    <EmbeddedResource Include="Omanik.resx">
+      <DependentUpon>Omanik.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tooded.resx">
       <DependentUpon>Tooded.cs</DependentUpon>
