--- a/Pood/Pood.csproj
+++ b/Pood/Pood.csproj
@@ -48,8 +48,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Aspose.PDF, Version=22.10.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aspose.PDF.22.10.0\lib\net4.0\Aspose.PDF.dll</HintPath>
+    <Reference Include="Aspose.Pdf, Version=11.1.1.0, Culture=neutral, PublicKeyToken=6947866647e416ec, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aspose.Pdf.11.1.1\lib\net40-client\Aspose.Pdf.dll</HintPath>
+    </Reference>
+    <Reference Include="Aspose.Pdf.Builder, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aspose.Pdf.Builder.1.0.0.4\lib\net40\Aspose.Pdf.Builder.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -76,6 +79,12 @@
     </Compile>
     <Compile Include="Kasutaja.Designer.cs">
       <DependentUpon>Kasutaja.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kategooria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kategooria.Designer.cs">
+      <DependentUpon>Kategooria.cs</DependentUpon>
     </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -157,6 +166,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Arved\Arve.pdf\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
