--- a/Pood/packages.config
+++ b/Pood/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aspose.PDF" version="22.10.0" targetFramework="net472" />
+  <package id="Aspose.Pdf" version="11.1.1" targetFramework="net472" />
+  <package id="Aspose.Pdf.Builder" version="1.0.0.4" targetFramework="net472" />
 </packages>
